<resources>
    <string name="app_name">씨네마천국</string>
    <string name="hard1">군도</string>
    <string name="hard2">2014.07.23 개봉</string>
    <string name="hard3">액션 / 137 분</string>
    <string name="hard5">예매율</string>
    <string name="_5_1_8">5위 1.8%</string>
    <string name="hard7">평점</string>
    <string name="_8_2">8.2</string>
    <string name="hard6">누적관객수</string>
    <string name="_839_399">839,399명</string>
    <string name="hard9">줄거리</string>
    <string name="hard11">군도, 백성을 구하라</string>
    <string name="_13">양반과 탐관오리들의 착취가 극에 달했던 조선 철종 13년.</string>
    <string name="hard12">힘 없는 백성의 편이 되어 세상을 바로잡고자 하는 의적떼인 군도(群盜), 지리산 추설이 있었다.</string>
    <string name="hard13">감독/출연</string>
    <string name="hard14">감독</string>
    <string name="hard16">윤종빈</string>
    <string name="todo">TODO</string>
    <string name="hard154">임시</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="asdw2">출연</string>
    <string name="add22">하정우(도치), 강동원(조윤)</string>
    <string name="asd1">한줄평</string>
    <string name="asd2">작성하기</string>
    <string name="asd3" />
    <string name="asd4">모두 보기</string>
    <string name="asd45">예매하기</string>
</resources>